# premise

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: fmidx_comparison.rs
src/: main.rs  utils.rs
src/templates/: app.js  index.html  styles.css
tests/: cli_integration.rs
tests/fixtures/: create_fixtures.sh
