[package]
name = "premise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrust = "0.0.7"
bio = "3.0.0"
indicatif = {version="0.17.8", features = ["rayon"]}
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7.0"
itertools = "0.14.0"
ndarray = {version="0.17.2", features=["blas", "rayon"]}
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
anyhow = "1.0.98"
tabled = "0.20.0"
format_num = "0.1.0"
textwrap = "0.16.2"
flate2 = "1.1.2"
ndarray-stats = "0.7.0"
chrono = "0.4.42"
genedex = "0.2.2"
savefile = "0.20.2"

[profile.release]
debug = true
