[package]
name = "premise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "3.0.0"
indicatif = {version="0.17.8", features = ["rayon"]}
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7.0"
itertools = "0.14.0"
anyhow = "1.0.98"
flate2 = "1.1.2"
chrono = "0.4.42"
genedex = "0.2.2"
savefile = "0.20.2"
dashmap = "6.1.0"
num = "0.4.3"

[profile.release]
debug = true
