[package]
name = "premise"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "3.0.0"
indicatif = {version="0.17.8", features = ["rayon"]}
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7.0"
itertools = "0.14.0"
anyhow = "1.0.98"
flate2 = "1.1.2"
chrono = "0.4.42"
webgpu-fmidx = { git = "https://github.com/sriram98v/webgpu-fmidx", features = ["cpu", "gpu"] }
bincode = "1"
dashmap = "6.1.0"
num = "0.4.3"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
ureq = "2"
genedex = "0.2.2"
savefile = "0.20.2"
pollster = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]

[dependencies.wgpu]
version = "24"
optional = true

[dependencies.bytemuck]
version = "1"
features = ["derive"]
optional = true

[dependencies.pollster]
version = "0.4"
optional = true

[[bench]]
name = "fmidx_comparison"
harness = false

[profile.release]
debug = true
